# cisd_43_sentiment_analysis_assignment

./: README.md  main.html  main.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: main-checkpoint.ipynb
